--- a/Display/Device.storyboard
+++ b/Display/Device.storyboard
@@ -408,7 +408,7 @@
                                 <rect key="frame" x="10" y="292" width="394" height="444"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" rowHeight="67" id="Bbp-ac-OG1">
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" rowHeight="67" id="Bbp-ac-OG1" customClass="WifiTableViewCell" customModule="MECS" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="44.5" width="394" height="67"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Bbp-ac-OG1" id="3zL-sR-KmV">
